--- a/alt-index.html
+++ b/alt-index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ARTS XXX Journal | Firstname Lastname</title>
+		<title>ARTS 486 Journal | Brenda Son</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid-utils.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -25,14 +25,14 @@
 				<div class="width-12-12-m width-4-12 height-8" id="aside">
 					<div class="aside-holder">
 						<div class="thumb-box">
-							<h3>ARTS 4XX<br />
-							The Title of the Course</h3>
+							<h3>ARTS 486<br />
+							Computer Graphics</h3>
 							<div class="half">
 								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
 							</div>
 							<div class="half">
-								<h4>Firstname Lastname</h4>
-								<p>Short bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum efficitur imperdiet. Morbi nibh turpis, posuere ac fermentum ac, tincidunt sit amet tortor.</p>
+								<h4>Brenda Son</h4>
+								<p>My name is Brenda, and I'm a senior majoring in Graphic Design here at Binghamton University, with a minor in Global Studies. I'm an aspiring UX/UI designer, and am still exploring the world of design!</p>
 								<p>
 									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
@@ -52,10 +52,11 @@
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
+						<h1>Project 1:  Memex</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<p>To create a new thing, I did this.
 						</p>
+						<p><a href="images/spec.pdf"> Functional Specification</a>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
@@ -65,6 +66,7 @@
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
+
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
