--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<p>To create a new thing, I did this.
 						</p>
 						<p><a href="images/spec.pdf"> Functional Specification</a>
-						<p><img class="r-image" src="User Flows-01.png"></p>
+						<p><img class="r-image" src="images/User Flows-01.png"></p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
