Update User Flow 2

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 						</p>
 						<p><a href="images/spec.pdf"> Functional Specification</a>
 						<p><img class="r-image" src="images/User Flows-01.png"></p>
+						<p><img class="r-image" src="images/User Flows-02.png"></p>
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
