Change to description (test)

--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
 					<div class="body">
 						<h1>Project 1:  Memex</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>To create a new thing, I did this.
+						<p>Year : 2020  
+							Type : Product Design
+							Role : UI/UX Design / User Research / Branding / Creative Direction
+							Tools Used : Illustrator / Photoshop 
 						</p>
 						<p><a href="images/spec.pdf"> Functional Specification</a>
+						<p>
+						</p>
 						<p><img class="r-image" src="images/User Flows-01.png"></p>
 						<p><img class="r-image" src="images/User Flows-02.png"></p>
 					</div>
