--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<h3>ARTS 486<br />
 							Computer Graphics</h3>
 							<div class="half">
-								<img class="r-image" src="https://via.placeholder.com/700" title="image title" />
+								<img class="r-image" src="images/Profile.png" title="image title" />
 							</div>
 							<div class="half">
 								<h4>Brenda Son</h4>
@@ -50,15 +50,14 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/Memex.png" title="Memex" />
 					<div class="body">
-						<h1>Project 1:  Memex</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Year : 2020  
-							Type : Product Design
-							Role : UI/UX Design / User Research / Branding / Creative Direction
-							Tools Used : Illustrator / Photoshop 
-						</p>
+						<h1>Project 1:  As We May Think</h1>
+						<p><img class="r-image" src="images/Memex Overview.png"></p>
+						<p>Year : 2020  </p>
+						<p>Type : Product Design </p>
+						<p> Role : UI/UX Design / User Research / Branding / Creative Direction </p>
+						<p>Tools Used : Illustrator / Photoshop </p>
 						<p><a href="images/spec.pdf"> Functional Specification</a>
 						<p>
 						</p>
@@ -66,6 +65,8 @@
 						<p><img class="r-image" src="images/User Flows-02.png"></p>
 					</div>
 				</div>
+
+<!--
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
@@ -109,14 +110,17 @@
 						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+								-->
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
+
+
 		<div id="footer">
-			<p>©2020 Firstname Lastname | Binghamton University</p>
+			<p>©2020 Brenda Son | Binghamton University</p>
 		</div>
 
 	</body>
