--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 							<div class="half">
 								<h4>Brenda Son</h4>
 								<p>I'm Brenda, a senior majoring in Graphic Design here at Binghamton University, with a minor in Global Studies. I'm an aspiring UX/UI designer, and am still exploring the world of design!</p>
-								<p>
+								<!--<p>
 									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
-								</p>
+								</p> -->
 							</div>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 						<p>Type : Product Design </p>
 						<p> Role : UI/UX Design / User Research / Branding / Creative Direction </p>
 						<p>Tools Used : Illustrator / Photoshop </p>
-						<p><a href="images/spec.pdf"> Functional Specification</a>
+						<p><a href="images/Memex.pdf"> Functional Specification</a>
 						<p>
 						</p>
 						<p><img class="r-image" src="images/User Flows-01.png"></p>
