--- a/data-portrait/index.html
+++ b/data-portrait/index.html
@@ -14,13 +14,15 @@
       <div id="portrait-holder">
         <div id="portrait-info">
         <h1>My Data Portraits</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Data portraits exploring preferences of video games.</p>
         <p><a id="key-btn" href="#">View Key</a></p>
         </div>
         <div id="portrait">
           <div id="sketch-over">
             <a id="close" href="#"><img src="images/close.svg"></a>
-            key goes here (use a 500x500 image)
+
+            <p><img class="r-image" src="images/Data Portraits_KEY.png"></p>
+
           </div>
           <div id="sketch"></div>
           <div class="dotstyle dotstyle-fillup">
