--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 								<h4>Brenda Son</h4>
 								<p>Hi, I'm Brenda. Designer, UX enthusiast.</p>
 								<p>
+									<!--
 									<a href="http://binghamton.edu" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
+									-->
 								</p> 
 							</div>
 						</div>
@@ -101,26 +103,68 @@
 
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/TranscodingData.png" title="image title" />
 					<div class="body">
-						<h1>Project 2:  Transcoding</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
+						<h1>Project 2:  Transcoding Data</h1>
+						<p><img class="r-image" src="images/Questionnaire.png"></p>
+						<p>
+
+						<p><img class="r-image" src="images/Data Portraits_KEY.png"></p>
+
+
+						<p>	
+							<br> <br>
+
+							<b> Data Portraits</b>
+						Using the questionnaire and the created key, data portraits were created.
+
 						</p>
 
-<!--
+							<b> Data Portraits</b>
 
+							<p><img class="r-image" src="images/Portraits/2_P1.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P2.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P3.png"></p>
+					
+							<p><img class="r-image" src="images/Portraits/2_P4.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P5.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P6.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P7.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P8.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P9.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P10.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P11.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P12.png"></p>
+
+							<p><img class="r-image" src="images/Portraits/2_P13.png"></p>
+
+						</p>
+
+
+<!--
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
+						<h1>Project 2: Transcoding Data < Data Portraits</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
-				</div>
+				</div> -->
+
+				<!--
 				<div class="width-6-12-m width-4-12 thumb">
 					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
 					<div class="body">
